[package]
name = "barony-mod-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio", "image"] }
iced_native = "0.4"
async-std = "1.10.0"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = { version = "1.10", features = ["chrono"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "4.0"
rand = "0.8.4"
image = "0.23.14"
